--- a/exportToHTML/index.html
+++ b/exportToHTML/index.html
@@ -1,1 +1,1 @@
-<html><head><title>C:\projects\caregiver_response</title></head><body><a href="manage.py.html">manage.py</a><br /></body></html>
+<html><head><title>C:\projects\caregiver_response2\templates\care</title></head><body><a href="about.html.html">about.html</a><br /><a href="index.html.html">index.html</a><br /><a href="situation_response.html.html">situation_response.html</a><br /></body></html>
